fix(EPP-12947): messaging list-item overflow wrap with long subject / body

--- a/src/components/molecules/Messaging/styles.module.scss
+++ b/src/components/molecules/Messaging/styles.module.scss
@@ -142,6 +142,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  gap: 8px;
 }
 
 .messageListContent {
@@ -149,6 +150,7 @@
   flex-direction: row;
   align-items: flex-end;
   justify-content: space-between;
+  gap: 8px;
 }
 
 .noMessageSelectedContainer {
